# polymarket-insider

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  GOLDSKY_INTEGRATION.md  LICENSE  README.md  README_TELEGRAM_SETUP.md  docker-compose.yml  final_bot_test.py  invite_bot.py  pyproject.toml  run_bot.py  setup.sh  setup_bot.py  setup_group.py  simple_bot_test.py  start_bot.py  test_bot_direct.py  test_bot_setup.py
.claude/: settings.local.json
cron/: health-check.cron
k8s/: configmap.yaml  deployment.yaml  pvc.yaml  secrets.yaml  service.yaml
monitoring/: alertmanager.yml  docker-compose.monitoring.yml  prometheus.yml
scripts/: deploy.sh  health-check.sh
src/polymarket_insider/: __init__.py  __main__.py  cli.py  connection_manager.py  container.py  enhanced_trade_monitor.py  exceptions.py  health_checker.py  large_trade_monitor.py  main.py  new_user_monitor.py  trade_monitor.py  trade_tracker.py
src/polymarket_insider/api/: __init__.py  client.py  data_api_client.py  gamma_client.py  goldsky_client.py  models.py
src/polymarket_insider/bot/: __init__.py  telegram_bot.py
src/polymarket_insider/config/: settings.py  validator.py
src/polymarket_insider/detector/: __init__.py  insider_detector.py  suspicious_trade_detector.py
src/polymarket_insider/services/: __init__.py  trade_analysis_service.py
src/polymarket_insider/utils/: logger.py  retry.py
tests/: __init__.py  test_basic.py  test_large_trades.py
