[project]
name = "polymarket-insider"
version = "0.1.0"
description = "Track Polymarket trades and alert on suspicious large trades via Telegram bot"
authors = [
    { name = "Polymarket Insider" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "python-telegram-bot>=21.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "web3>=6.15.0",
    "eth-utils>=2.0.0",
    "asyncio-mqtt>=0.16.0",
    "websockets>=12.0",
    "click>=8.0.0",
    "gql>=3.4.1",
    "ujson>=5.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
polymarket-insider = "polymarket_insider.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true